# Flask-Example-Application-Factory

./: .gitignore  README.md  pyproject.toml  run.py
app/: blueprint.py  models.py
app/templates/: index.html  more.html
