[project]
name = "Flask-Example-Application-Factory"
version = "2"
authors = [
    { name = "David Carmichael" },
]
description = "A repo that contains a working example of Flask using the Application Factory pattern."
requires-python = ">=3.9"
license = { text = "CC0 1.0 Universal" }
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask",
    "flask-sqlalchemy",
]